<resources>
    <string name="app_name">Dev Neoxmy2</string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <string name="country">Country</string>
    <string name="title">Title</string>
    <string name="Division">Division</string>
    <string name="signoutmessage">Do you want to Exit Application?</string>
    <string name="exit">Exit Application</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="ListOfDeveloper"> Team Members </string>
    <string name="signout"> Sign Out </string>
    <string name="rate"> Rate </string>
    <string name="share"> Share </string>
    <string name="about"> About </string>
    <string name="offers"> Our Services </string>
    <string name="login"> Log In </string>
    <string name="newAccount"> New Account </string>
    <string name="profile"> Profile </string>

    <string name="design">Design </string>
    <string name="programming">Developing Apps</string>
    <string name="videos">Videos </string>
    <string name="money">Profit strategies </string>
    <string name="others">Other Services</string>
    <string name="askForServices">Ask For Service </string>
    <string name="youtubeAPIKey">AIzaSyDb-kthRHn2p5EFH780zAaJsNxw6YwhFOY</string>
    <string name="youtubeVideo_id">OXVAmNTVJsM</string>


    <string-array name="dev1">
        <item>Slimane Salim</item>
        <item>Tunisia</item>
        <item>Android Applications Tutor</item>
        <item>Advertising and multimedia</item>
        <item>slimane</item>
    </string-array>

    <string-array name="dev2">
        <item>Reham Mahmoud</item>
        <item>Egypt</item>
        <item>Android Applications developer</item>
        <item>Android Applications development</item>
        <item>reham</item>
    </string-array>

    <string-array name="dev3">
        <item>Obida ElHatem</item>
        <item>Syria</item>
        <item>Android Applications developer</item>
        <item>Android Applications development</item>
        <item>obida</item>
    </string-array>

    <string-array name="dev4">
        <item>Samah Makki</item>
        <item>Egypt</item>
        <item>Android Applications developer</item>
        <item>Android Applications development</item>
        <item>samah</item>
    </string-array>

    <string-array name="dev5">
        <item>Tahany Mahmoud</item>
        <item>Egypt</item>
        <item>Android Applications developer</item>
        <item>Android Applications development</item>
        <item>tahany</item>
    </string-array>

    <string-array name="dev6">
        <item>Youssef Essam</item>
        <item>Egypt</item>
        <item>Android Applications developer</item>
        <item>Android Applications development</item>
        <item>youssef</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dev_neoxmy2">
        Dev Impact is an arab team who can develop professional mobile applications ,
        their members have strong technical background . Our target is to develop new creative and competitive ideas .
        we always guarantee proficiency , experience, punctuality  and customers satisfactions.
    </string>
    <string name="profit_strategies">
        Dear Customer, we can provide you with the best advices and strategies to achieve high profit form your application ,  dont hesitate to contact us , just click on the button below.
    </string>

    <string name="videos_activity">
        Dear Customer , we can make professional Promo videos for you,  dont hesitate to contact us , just click on the button below.
    </string>

    <string name="other_services">
        Dear Customer , we offers many other services . dont hesitate to contact us , just click on the button below.
    </string>

    <string name="developing_apps">
       Dear Customer ,we can develop professional Applications for you ,  dont hesitate to contact us , just click on the button below.
    </string>

    <string name="design_pics">
        Dear Customer ,we can design professional photos and Logos for you ,  dont hesitate to contact us , just click on the button below.
    </string>

</resources>

