<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="30dp"
        android:paddingBottom="5dp"
        android:padding="10dp"
        android:text="Services"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="10dp"
        android:rowCount="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/design"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/design" />

            <TextView
                android:id="@+id/design2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:paddingBottom="20dp"
                android:text="@string/design"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/programming"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/programming" />

            <TextView
                android:id="@+id/programming2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:paddingBottom="20dp"
                android:text="@string/programming"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/videos"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/videos"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/videos2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:paddingBottom="20dp"
                android:text="@string/videos"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/money"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/money"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/money2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:paddingBottom="20dp"
                android:text="@string/money"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/others"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/others"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/others2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:paddingBottom="20dp"
                android:text="@string/others"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/askforservice"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/askforservice"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/askforservice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:paddingBottom="20dp"
                android:text="@string/askForServices"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
        </LinearLayout>

    </GridLayout>



</LinearLayout>

</ScrollView>